added home page + refactor discover page
